﻿drkns 18.03.2015 08:59:33 +0200 - build 4312

1. В некоторых случаях не инициализировались объекты синхронизации.

drkns 18.03.2015 08:18:21 +0200 - build 4311

1. Уточнение 4309.

drkns 17.03.2015 23:32:39 +0200 - build 4310

1. 0002970: Случаи необновления заголовка окна

drkns 17.03.2015 22:42:42 +0200 - build 4309

1. Продолжаем ломать редактор. Возможны сказочные баги.

zg 17.03.2015 18:48:44 +0200 - build 4308

1. уточнение 4306.

drkns 17.03.2015 09:46:47 +0200 - build 4307

1. 0002969: В ProcessViewerEventW не приходят сообщения о закрытии QuickView

zg 17.03.2015 00:30:18 +0200 - build 4306

1. с форума: проблемы с EF_OPENMODE_USEEXISTING.

zg 15.03.2015 03:02:46 +0200 - build 4305

1. в ProcessEditorInput не посылаются псевдоклавиши KEY_IDLE и KEY_NONE.

w17 12.03.2015 17:40:22 +0300 - build 4304

1. Уточнение 4302.

drkns 11.03.2015 20:07:31 +0200 - build 4303

1. Уточнение 4298.

w17 11.03.2015 15:50:45 +0300 - build 4302

1. Устранение запроса повышения привилегий при посмотре файла на флэшке с NTFS под Win Server 2008 R2 SP1

w17 11.03.2015 13:20:04 +0300 - build 4301

1. Уточнение 4279.

drkns 09.03.2015 23:54:31 +0200 - build 4300

1. Уточнение 4298.

zg 09.03.2015 20:27:35 +0200 - build 4299

1. опечатка в 4298.

drkns 09.03.2015 19:35:06 +0200 - build 4298

1. Рефакторинг.

shmuel 09.03.2015 19:09:39 +0200 - build 4297

1. M#2966: Неправильная вставка вертикального блока в конце файла.

drkns 09.03.2015 16:57:18 +0200 - build 4296

1. Уточнение 4294.

shmuel 09.03.2015 00:15:32 +0200 - build 4295

1. M#2965: При вставке вертикального блока усекаются последние символы в каждой строке.

drkns 08.03.2015 19:08:46 +0200 - build 4294

1. Рефакторинг.

drkns 08.03.2015 10:38:08 +0200 - build 4293

1. 0002963: Падение Фара при открытии файла в неверной кодировке

2. Пара "уточнений".

drkns 08.03.2015 03:59:24 +0200 - build 4292

1. В GCC некорректно (точнее, слишком корректно) работали fsf.sprintf/fsf.snprintf.
