@@ -1,4 +1,8 @@
-﻿drkns 18.03.2015 08:59:33 +0200 - build 4312
+﻿zg 18.03.2015 15:36:39 +0200 - build 4313
+
+1. уточнение 4305: в ProcessEditorInputW перестали приходить сообщения об отпускании клавиш.
+
+drkns 18.03.2015 08:59:33 +0200 - build 4312
 
 1. В некоторых случаях не инициализировались объекты синхронизации.
 
